--- a/src/main/res/layout-land/fragment_ngid_login.xml
+++ b/src/main/res/layout-land/fragment_ngid_login.xml
@@ -3,7 +3,7 @@
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2017-2018, 2020 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2017-2018, 2020-2021 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -131,7 +131,7 @@
             android:layout_height="42dp"
             android:layout_margin="16dp"
             android:layout_weight="1"
-            android:background="@drawable/blue_rounded_button"
+            android:background="@drawable/rounded_button"
             android:text="@string/login"
             android:textColor="@color/color_white" />
     </LinearLayout>
