--- a/src/main/res/layout/dialog_select_zoom_levels.xml
+++ b/src/main/res/layout/dialog_select_zoom_levels.xml
@@ -5,7 +5,7 @@
   ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2015-2017, 2021 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser General Public License as published by
@@ -43,8 +43,8 @@
         custom:mrb_pinRadius="0dp"
         custom:mrb_rangeBarColor="@color/accent"
         custom:mrb_rangeBarPaddingBottom="20dp"
-        custom:mrb_selectorColor="@color/primary_dark"
-        custom:mrb_selectorSize="8dp"
+        custom:mrb_thumbColor="@color/primary_dark"
+        custom:mrb_thumbSize="8dp"
         custom:mrb_tickEnd="25"
         custom:mrb_tickStart="0"/>
 
