--- a/src/main/res/layout-land/fragment_ngid_login.xml
+++ b/src/main/res/layout-land/fragment_ngid_login.xml
@@ -93,13 +93,14 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp">
 
-        <EditText
+        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:autofillHints="password"
             android:ems="10"
+            android:gravity="center"
             android:hint="@string/password"
             android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
