--- a/src/main/res/layout/fragment_ngw_login.xml
+++ b/src/main/res/layout/fragment_ngw_login.xml
@@ -5,7 +5,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2015-2016, 2020 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2015-2016, 2020-2021 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -88,7 +88,7 @@
             android:hint="@string/user_name_ngw"
             android:inputType="textPersonName" />
 
-        <EditText
+        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
