--- a/src/main/res/xml/authenticator.xml
+++ b/src/main/res/xml/authenticator.xml
@@ -23,10 +23,10 @@
   -->
 
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-                       android:accountType="@string/nextgis_accounts_auth"
-                       android:icon="@drawable/ic_ngw"
-                       android:smallIcon="@drawable/ic_ngw"
-                       android:label="@string/nextgis_web"
+    android:accountType="@string/nextgis_accounts_auth"
+    android:icon="@drawable/ic_ngw"
+    android:smallIcon="@drawable/ic_ngw"
+    android:label="@string/nextgis_accounts_name"
     >
 
 </account-authenticator>
