--- a/src/main/res/layout/fragment_raster_layer_style.xml
+++ b/src/main/res/layout/fragment_raster_layer_style.xml
@@ -74,7 +74,7 @@
         android:layout_margin="5dp"
         android:max="510"/>
 
-    <android.support.v7.widget.SwitchCompat
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/make_grayscale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
