--- a/src/main/res/layout/actionbar.xml
+++ b/src/main/res/layout/actionbar.xml
@@ -22,7 +22,7 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/main_toolbar"
                                    android:layout_height="?attr/actionBarSize"
@@ -33,4 +33,4 @@
                                    app:popupTheme="?ThemeOverlay.NextGIS.ToolbarPopup"
                                    app:elevation="2dp"
     >
-</android.support.v7.widget.Toolbar>
+</androidx.appcompat.widget.Toolbar>
