--- a/src/main/res/layout/dialog_local_resource.xml
+++ b/src/main/res/layout/dialog_local_resource.xml
@@ -50,7 +50,7 @@
 
     </HorizontalScrollView>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
