--- a/src/main/res/layout/formtemplate_distance.xml
+++ b/src/main/res/layout/formtemplate_distance.xml
@@ -27,7 +27,7 @@
     android:gravity="center"
     android:orientation="horizontal">
 
-    <android.support.v7.widget.AppCompatEditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/distance"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
