--- a/src/main/res/layout/formtemplate_spinner.xml
+++ b/src/main/res/layout/formtemplate_spinner.xml
@@ -20,7 +20,7 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<android.support.v7.widget.AppCompatTextView
+<androidx.appcompat.widget.AppCompatTextView
     android:id="@android:id/text1"
     style="?android:attr/spinnerItemStyle"
     xmlns:android="http://schemas.android.com/apk/res/android"
