--- a/src/main/res/layout/formtemplate_tabs.xml
+++ b/src/main/res/layout/formtemplate_tabs.xml
@@ -27,7 +27,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabGravity="fill"
