--- a/src/main/res/layout/fragment_ngid_login.xml
+++ b/src/main/res/layout/fragment_ngid_login.xml
@@ -71,7 +71,7 @@
         android:text="@string/sign_in_tip"
         android:textColor="@color/color_grey_600" />
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -88,9 +88,9 @@
             android:gravity="center"
             android:hint="@string/user_name_ngid"
             android:inputType="textPersonName" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -106,7 +106,7 @@
             android:gravity="center"
             android:hint="@string/password"
             android:inputType="textPassword" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/signin"
