--- a/src/main/res/layout/list_content.xml
+++ b/src/main/res/layout/list_content.xml
@@ -59,7 +59,7 @@
         android:orientation="vertical"
         android:visibility="gone">
 
-        <android.support.v7.widget.SearchView
+        <androidx.appcompat.widget.SearchView
             android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
