--- a/src/main/res/layout/style_text.xml
+++ b/src/main/res/layout/style_text.xml
@@ -41,7 +41,7 @@
             android:text="@string/text"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-        <android.support.v7.widget.SwitchCompat
+        <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/not_hardcoded"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
