--- a/src/main/res/xml/provider_paths.xml
+++ b/src/main/res/xml/provider_paths.xml
@@ -21,6 +21,12 @@
   -->
 
 <paths>
+    <external-cache-path
+        name="external_cache_files"
+        path="." />
+    <external-files-path
+        name="external_files_files"
+        path="." />
     <external-path
         name="external_files"
         path="."/>
