--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -316,4 +316,14 @@
         <item name="android:textAllCaps">true</item>>
     </style>
 
+
+    <style name="CustomPreferenceTheme" parent="PreferenceThemeOverlay">
+        <!-- Настройка отступов -->
+        <item name="android:iconSpaceReserved">false</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">0dp</item>
+        <!-- Другие настройки, если необходимо -->
+        <item name="android:dividerHeight">1dp</item>
+        <item name="android:divider">@android:color/darker_gray</item>
+    </style>
 </resources>
