some bugs fixed, web images from NGW, progress for login activities

--- a/src/main/res/layout-land/fragment_ngid_login.xml
+++ b/src/main/res/layout-land/fragment_ngid_login.xml
@@ -19,13 +19,23 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<ScrollView
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
     >
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -191,4 +201,30 @@
         android:layout_marginTop="16dp"
         />
 </LinearLayout>
+
+
+    </RelativeLayout>
 </ScrollView>
+
+<RelativeLayout
+android:id="@+id/progressArea"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+android:background="@color/background"
+android:visibility="gone">
+
+<ProgressBar
+    android:id="@+id/progress"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:layout_gravity="center"
+    android:indeterminate="true"
+    android:indeterminateOnly="true"
+    android:visibility="visible"
+    android:layout_centerInParent="true"
+    />
+
+</RelativeLayout>
+</RelativeLayout>
