--- a/src/main/res/layout/activity_ngid_login.xml
+++ b/src/main/res/layout/activity_ngid_login.xml
@@ -34,5 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize"
-        tools:layout="@layout/fragment_ngid_login"/>
+        tools:layout="@layout/fragment_ngid_login"
+        />
+
+
 </FrameLayout>
