--- a/src/main/res/layout/row_loading.xml
+++ b/src/main/res/layout/row_loading.xml
@@ -37,7 +37,8 @@
         android:layout_margin="5dp"
         android:gravity="center"
         android:indeterminate="true"
-        android:indeterminateOnly="true"/>
+        android:indeterminateOnly="true"
+        />
 
     <TextView
         android:id="@+id/tvName"
