--- a/src/main/res/layout/fragment_ngid_login.xml
+++ b/src/main/res/layout/fragment_ngid_login.xml
@@ -43,7 +43,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <View
             android:layout_width="0dp"
@@ -52,12 +53,12 @@
 
         <ImageView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="72dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:src="@drawable/ngm_logo_shadow"
-            tools:ignore="ContentDescription" />
-
+            android:src="@drawable/ic_launcher"
+            tools:ignore="ContentDescription"
+            />
         <View
             android:layout_width="0dp"
             android:layout_height="1dp"
@@ -69,7 +70,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="-24dp"
         android:layout_marginBottom="36dp"
         android:text="@string/login"
         android:textColor="@color/primary_dark"
@@ -109,6 +109,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/password_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
