--- a/src/main/res/layout-land/fragment_ngid_login.xml
+++ b/src/main/res/layout-land/fragment_ngid_login.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/loginLogo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -76,6 +77,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/enteringText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
