--- a/src/main/res/layout/activity_ngid_login.xml
+++ b/src/main/res/layout/activity_ngid_login.xml
@@ -20,11 +20,20 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<FrameLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+
+    android:id="@+id/drawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    >
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
 
     <include layout="@layout/actionbar"/>
 
@@ -39,3 +48,4 @@
 
 
 </FrameLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
