--- a/src/main/res/layout/activity_standard_attributes.xml
+++ b/src/main/res/layout/activity_standard_attributes.xml
@@ -21,9 +21,17 @@
   ~ You should have received a copy of the GNU Lesser Public License
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+
+    android:id="@+id/drawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    >
+
 
 <LinearLayout android:id="@+id/root_view"
-              xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -48,3 +56,4 @@
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
+    </androidx.drawerlayout.widget.DrawerLayout>
