--- a/src/main/res/layout/activity_resources.xml
+++ b/src/main/res/layout/activity_resources.xml
@@ -19,7 +19,16 @@
   ~ You should have received a copy of the GNU Lesser Public License
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+
+    android:id="@+id/drawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    >
+<LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -52,3 +61,4 @@
             android:textColor="@color/color_white"/>
     </LinearLayout>
 </LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
