--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -109,5 +109,6 @@
     <color name="header_line_color">@android:color/holo_red_light</color>
 
     <color name="table_view_default_text_color">#0a0a0a</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
